--- a/css/styles.css
+++ b/css/styles.css
@@ -772,26 +772,27 @@ h1, h2, h3, ul, p {
     top: 24px;
     right: 24px;
 
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     width: 24px;
     height: 24px;
     border-radius: 50%;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
-
+    fill: #000;
     cursor: pointer;
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    
+    background-color: #404BBF;
 }
 
- .modal-icon {
-    fill: #000;
- }
+
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon {
+    fill: #FFFFFF;
+}
 
 /* FORM */
 textarea {
@@ -893,6 +894,15 @@ margin-top: 26px;
     border-color: var(--accent-color);
 }
 
+.textarea-box::placeholder {
+    font-family: inherit;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+
+    color: rgba(117, 117, 117, 0.5);
+}
+
 .checkbox-name {
     display: flex;
     font-family: inherit;
@@ -939,6 +949,7 @@ margin-top: 26px;
 
 .policy {
     margin-left: 4px;
+    color: var(--accent-color);
 }
 
 .form-button {
@@ -997,6 +1008,7 @@ margin-top: 26px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: var(--bg-color-foot-head);
+    color: #FFFFFF;
 }
 
 .form-btn {
